--- a/src/app/entregas/lista-entregas/lista-entregas.component.html
+++ b/src/app/entregas/lista-entregas/lista-entregas.component.html
@@ -48,16 +48,10 @@
         <td mat-cell *matCellDef="let element">
           <button
             mat-icon-button
-            (click)="selecionarEntrega(element)"
-            matTooltip="Ver no mapa"
+            (click)="abrirModalDetalhes(element)"
+            matTooltip="Ver detalhes da entrega"
           >
             <mat-icon>visibility</mat-icon>
-          </button>
-          <button
-            mat-icon-button
-            matTooltip="Ver detalhes completos"
-          >
-            <mat-icon>info_outline</mat-icon>
           </button>
         </td>
       </ng-container>
@@ -66,7 +60,6 @@
       <tr
         mat-row
         *matRowDef="let row; columns: displayedColumns"
-        (click)="selecionarParaMapa(row)"
         class="delivery-row"
       ></tr>
     </table>
