--- a/src/app/entregas/lista-entregas/lista-entregas.component.html
+++ b/src/app/entregas/lista-entregas/lista-entregas.component.html
@@ -17,8 +17,8 @@
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
         <td mat-cell *matCellDef="let element">
-          <span class="status-badge status-{{ element.status }}">
-            {{ element.status | titlecase }}
+          <span class="status-badge status-{{ element.status | lowercase }}">
+            {{ element.status | formatStatus }}
           </span>
         </td>
       </ng-container>
