Atualizações sobre a localização do Entregador. Agora, o entregador se move no mapa baseado na localização enviada via Flutter e recebida via Backend. Ainda faltam refinamentos.

--- a/src/app/entregas/delivery-details-modal/delivery-details-modal.component.html
+++ b/src/app/entregas/delivery-details-modal/delivery-details-modal.component.html
@@ -55,6 +55,6 @@
   </div>
 
   <div class="map-container">
-    <app-mapa [entrega]="entrega"></app-mapa>
+    <app-mapa></app-mapa>
   </div>
 </mat-dialog-content>
