Método eventDriverLocation atualizado no Backend. A partir de agora, a polyline cinza indica rota tomada pelo entregador. Falta refinamento.

--- a/src/app/mapa/mapa.component.html
+++ b/src/app/mapa/mapa.component.html
@@ -22,6 +22,11 @@
       [options]="options"
     ></map-polyline>
 
+    <map-polyline
+      *ngIf="historyPolylineOptions"
+      [options]="historyPolylineOptions"
+    ></map-polyline>
+
   </google-map>
 </div>
 <ng-template #loading>
