--- a/src/app/entregas/delivery-details-modal/delivery-details-modal.component.html
+++ b/src/app/entregas/delivery-details-modal/delivery-details-modal.component.html
@@ -20,6 +20,12 @@
       <span class="label">Código:</span>
       <span class="value code">{{ entrega.codigoEntrega }}</span>
     </div>
+
+    <div class="info-item" *ngIf="entrega.driverId && typeof entrega.driverId === 'object'">
+      <span class="label">Entregador:</span>
+      <span class="value">{{ entrega.driverId.nome }}</span>
+    </div>
+
     <div class="info-item">
       <span class="label">Origem:</span>
       <span class="value">{{ entrega.origin.address }}</span>
