--- a/src/app/entregas/lista-entregas/lista-entregas.component.html
+++ b/src/app/entregas/lista-entregas/lista-entregas.component.html
@@ -43,6 +43,13 @@
         </td>
       </ng-container>
 
+      <ng-container matColumnDef="driverName">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Entregador</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.driverId && typeof element.driverId === 'object' ? element.driverId.nome : '-' }}
+        </td>
+      </ng-container>
+
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Ações</th>
         <td mat-cell *matCellDef="let element">
